--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": "https://stefan0712.github.io/arithmo",
   "scripts": {
-    "dev": "vite --port 5174",
+    "dev": "vite --port 5174 --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
